--- a/website/templates/default/main/index.html
+++ b/website/templates/default/main/index.html
@@ -4,15 +4,15 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
-		<link rel="stylesheet" type="text/css" href="css/font-awesome-4.7.0.min.css" />
-<link rel="shortcut icon" href="favicon.ico">
+		<link rel="stylesheet" type="text/css" href="/static/default/css/bootstrap.min.css" />
+		<link rel="stylesheet" type="text/css" href="/static/default/css/font-awesome-4.7.0.min.css" />
+        <link rel="shortcut icon" href="favicon.ico">
 		<title>资源首页</title>
 		<style type="text/css">
 			body {width: 100%;}
 			._header,._banner,._content,._footer{width: 100%;}
 			.header,.banner,.content,.footer{width: 1200px;margin: 0 auto;}
-			
+
 			._header{background: #222222;}
 			.header nav{border-width: 0;margin-bottom: 0;}
 
@@ -22,8 +22,8 @@
 			._footer{background: #222222;padding: 2em;}
 			.footer{color: #9d9d9d;text-align: center;}
 		</style>
-		<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
-		<script type="text/javascript" src="js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="/static/default/js/jquery-2.1.4.min.js"></script>
+		<script type="text/javascript" src="/static/default/js/bootstrap.min.js"></script>
 		<script type="text/javascript">
 			$(function () {
             });
